<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frameOneVM" type="com.ichords.app.modules.frameone.data.viewmodel.FrameOneVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumn"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearAndroidLarge"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <ImageView android:id="@+id/imageImageOne"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_110pxh"
                android:layout_marginEnd="@dimen/_139pxh"
                android:layout_marginStart="@dimen/_143pxh"
                android:layout_marginTop="@dimen/_79pxv"
                android:layout_width="@dimen/_108pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_image1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image1"/>
            <LinearLayout android:id="@+id/linearColumnichords"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_142pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtICHORDS"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_69pxh"
                    android:layout_marginStart="@dimen/_69pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{frameOneVM.frameOneModel.txtICHORDS}"
                    style="@style/txtPassionOneregular35" tools:text="@string/lbl_ichords"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_68pxh"
                    android:layout_marginStart="@dimen/_69pxh"
                    android:layout_marginTop="@dimen/_76pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@{frameOneVM.frameOneModel.txtLanguage}"
                    style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_e_mail"/>
                <LinearLayout android:id="@+id/linearRowlanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_68pxh"
                    android:layout_marginStart="@dimen/_69pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguageOne"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_13pxv"
                        android:layout_marginStart="@dimen/_9pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_weight="0.57"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{frameOneVM.frameOneModel.txtLanguageOne}"
                        style="@style/txtRobotoromanbold13" tools:text="@string/lbl_senha"/>
                    <ImageView android:id="@+id/imageSevenone"
                        android:layout_height="@dimen/_35pxh"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginStart="@dimen/_162pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="@dimen/_35pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_66847011"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_66847011"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnEntrar"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_68pxh"
                    android:layout_marginStart="@dimen/_69pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_entrar"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_entrar"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEsqueciasenha"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_68pxh"
                    android:layout_marginStart="@dimen/_68pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{frameOneVM.frameOneModel.txtEsqueciasenha}"
                    style="@style/txtRobotoromansemibold13" tools:text="@string/lbl_esqueci_a_senha"/>
                <ImageView android:id="@+id/imageImageFive"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_39pxh"
                    android:layout_marginEnd="@dimen/_68pxh"
                    android:layout_marginStart="@dimen/_68pxh"
                    android:layout_marginTop="@dimen/_43pxv"
                    android:layout_width="@dimen/_160pxh"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_2pxh}"
                    imageRes="@{@drawable/img_image5}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image5"/>
                <LinearLayout android:id="@+id/linearRowlineone"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <View android:background="@color/gray_400"
                        android:id="@+id/lineLineOne"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_weight="0.48" android:layout_width="0dp"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtOu"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_weight="0.04"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{frameOneVM.frameOneModel.txtOu}"
                        style="@style/txtRobotoromanregular13" tools:text="@string/lbl_ou"/>
                    <View android:background="@color/gray_400"
                        android:id="@+id/lineLineTwo"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_weight="0.48" android:layout_width="0dp"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_68pxh"
                    android:layout_marginStart="@dimen/_68pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{frameOneVM.frameOneModel.txtPrice}"
                    style="@style/txtRobotoromanmedium13" tools:text="@string/msg_continuar_sem_l"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearRowlanguageTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_68pxh"
                    android:layout_marginStart="@dimen/_68pxh"
                    android:layout_marginTop="@dimen/_26pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguageTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.81"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{frameOneVM.frameOneModel.txtLanguageTwo}"
                        style="@style/txtRobotoromansemibold13_1" tools:text="@string/msg_n_o_tem_uma_con"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCriar"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.19"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{frameOneVM.frameOneModel.txtCriar}"
                        style="@style/txtRobotoromansemibold13_2" tools:text="@string/lbl_criar"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
