<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargetwoVM" type="com.ichords.app.modules.androidlargetwo.data.viewmodel.AndroidLargetwoVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageImageTwo"
            android:layout_height="@dimen/_33pxh"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="@dimen/_38pxh"
            android:scaleType="fitXY" android:src="@drawable/img_image2"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image2"/>
        <ImageView android:id="@+id/imageImageOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_110pxh"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="@dimen/_108pxh"
            android:scaleType="fitXY" imageRes="@{@drawable/img_image1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image1"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnichords"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_125pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtICHORDS"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_54pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{androidLargetwoVM.androidLargetwoModel.txtICHORDS}"
                style="@style/txtPassionOneregular35" tools:text="@string/lbl_ichords"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_53pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingStart="@dimen/_4pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@{androidLargetwoVM.androidLargetwoModel.txtLanguage}"
                style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_nome"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_53pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingStart="@dimen/_4pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@{androidLargetwoVM.androidLargetwoModel.txtLanguageOne}"
                style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_e_mail"/>
            <LinearLayout android:id="@+id/linearRowlanguageTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_53pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_weight="0.57"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargetwoVM.androidLargetwoModel.txtLanguageTwo}"
                    style="@style/txtRobotoromanbold13" tools:text="@string/lbl_senha"/>
                <ImageView android:id="@+id/imageSixsixeightfour"
                    android:layout_height="@dimen/_35pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_161pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="@dimen/_35pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_66847011"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_66847011"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowlanguageThree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_53pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_weight="0.74"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargetwoVM.androidLargetwoModel.txtLanguageThree}"
                    style="@style/txtRobotoromanbold13" tools:text="@string/msg_repetir_a_senha"/>
                <ImageView android:id="@+id/imageSixsixeight"
                    android:layout_height="@dimen/_35pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_106pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="@dimen/_35pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_66847011"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_66847011"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCriarConta"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_52pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_criar_conta"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_criar_conta"/>
            <ImageView android:id="@+id/imageImageSix"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_39pxh"
                android:layout_marginEnd="@dimen/_54pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="@dimen/_160pxh"
                android:scaleType="fitXY" cornerRadius="@{@dimen/_2pxh}"
                imageRes="@{@drawable/img_image6}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image6"/>
            <LinearLayout android:id="@+id/linearRowlineone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View android:background="@color/gray_400"
                    android:id="@+id/lineLineOne"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="0.48" android:layout_width="0dp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOu"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_weight="0.04"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargetwoVM.androidLargetwoModel.txtOu}"
                    style="@style/txtRobotoromanregular13" tools:text="@string/lbl_ou"/>
                <View android:background="@color/gray_400"
                    android:id="@+id/lineLineTwo"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="0.48" android:layout_width="0dp"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_54pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{androidLargetwoVM.androidLargetwoModel.txtPrice}"
                style="@style/txtRobotoromanmedium13" tools:text="@string/msg_continuar_sem_l"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowlanguageFour"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_54pxh"
                android:layout_marginStart="@dimen/_54pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageFour"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.76"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargetwoVM.androidLargetwoModel.txtLanguageFour}"
                    style="@style/txtRobotoromansemibold13_1" tools:text="@string/msg_j_tem_uma_cont"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEntrar"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.24"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargetwoVM.androidLargetwoModel.txtEntrar}"
                    style="@style/txtRobotoromansemibold13_2" tools:text="@string/lbl_entrar2"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
